# task-inference

./: .gitignore  README.md  pyproject.toml
.github/scripts/: cliff.toml
.github/workflows/: release.yml  run_local_test.yml
docs/: onnx-adapters.md
examples/: depth-estimation.jpg.license
examples/onnxruntime/: README.md  smoke_test.py
examples/onnxruntime/audio/: audio_classification.py  speech_recognition.py
examples/onnxruntime/vision/: depth_estimation.py  image_anonymization.py  image_classification.py  image_segmentation.py  object_detection.py  visual_question_answering.py  zero_shot_image_classification.py  zero_shot_object_detection.py
examples/server/: Dockerfile  README.md  docker-compose.yml  server.py  test.py
examples/server/pytriton/: Dockerfile  README.md  docker-compose.yml  server.py
examples/server/serverless/: Dockerfile  README.md  _nuclio_wrapper.py  docker-compose.yml  handler.py  oi-processor.yaml  test.py
examples/transformers/: README.md  smoke_test.py
examples/transformers/audio/: audio_classification.py  speech_recognition.py
examples/transformers/vision/: depth_estimation.py  image_anonymization.py  image_classification.py  image_segmentation.py  mask_generation.py  object_detection.py  visual_question_answering.py  zero_shot_image_classification.py  zero_shot_object_detection.py
src/task_inference/: __init__.py  factory.py  utils.py
src/task_inference/implementations/: __init__.py
src/task_inference/implementations/onnxruntime/: __init__.py  base.py
src/task_inference/implementations/onnxruntime/adapters/: __init__.py  base.py
src/task_inference/implementations/onnxruntime/adapters/audio/: __init__.py  asr.py  classification.py
src/task_inference/implementations/onnxruntime/adapters/vision/: __init__.py  classification.py  depth.py  detection.py  segmentation.py  vqa.py  zero_shot_classification.py  zero_shot_detection.py
src/task_inference/implementations/onnxruntime/audio/: __init__.py  audio_classification.py  speech_recognition.py
src/task_inference/implementations/onnxruntime/vision/: __init__.py  depth_estimation.py  image_anonymization.py  image_classification.py  image_segmentation.py  object_detection.py  visual_question_answering.py  zero_shot_image_classification.py  zero_shot_object_detection.py
src/task_inference/implementations/transformers/: __init__.py  base.py
src/task_inference/implementations/transformers/audio/: __init__.py  audio_classification.py  speech_recognition.py
src/task_inference/implementations/transformers/vision/: __init__.py  depth_estimation.py  image_anonymization.py  image_classification.py  image_segmentation.py  mask_generation.py  object_detection.py  visual_question_answering.py  zero_shot_image_classification.py  zero_shot_object_detection.py
src/task_inference/protocol/: __init__.py  v2.py
src/task_inference/tasks/: __init__.py  base.py
src/task_inference/tasks/audio/: __init__.py  audio_classification.py  speech_recognition.py
src/task_inference/tasks/vision/: __init__.py  depth_estimation.py  image_anonymization.py  image_classification.py  image_segmentation.py  mask_generation.py  object_detection.py  visual_question_answering.py  zero_shot_image_classification.py  zero_shot_object_detection.py
tests/: conftest.py  test_factory.py  test_utils.py
tests/test_implementations/: test_transformers_base.py  test_transformers_tasks.py
tests/test_protocol/: test_v2.py
tests/test_tasks/: test_audio_tasks.py  test_metadata.py  test_vision_tasks.py
